[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/styles/style_Button_Normal.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/styles/style_Button_Press.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/styles/style_Button_Hover.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/fonts/Roboto.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/theme/app_theme.tres" type="Theme" id=5]
[ext_resource path="res://component/TodoList/Task.gd" type="Script" id=6]
[ext_resource path="res://assets/icons/plus-circle.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/x-circle.svg" type="Texture" id=8]

[node name="Task" type="HBoxContainer"]
margin_right = 1014.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Task_Description" type="LineEdit" parent="."]
margin_right = 954.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
placeholder_text = "Description de la tache"

[node name="Add_Button" type="Button" parent="."]
margin_left = 958.0
margin_right = 984.0
margin_bottom = 32.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
icon = ExtResource( 7 )
flat = true

[node name="Remove_Button" type="Button" parent="."]
margin_left = 988.0
margin_right = 1014.0
margin_bottom = 32.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
icon = ExtResource( 8 )
flat = true
[connection signal="pressed" from="Add_Button" to="." method="_on_Add_Button_pressed"]
[connection signal="pressed" from="Remove_Button" to="." method="_on_Remove_Button_pressed"]
